--- a/style.css
+++ b/style.css
@@ -33,9 +33,31 @@ body {
 	opacity: 0;
 }
 
+a {
+	color: white;
+	text-decoration: none;
+	font-size: 50px;
+}
+
 .header {
 	grid-column: 8 /24;
 	grid-row: 2 / 3;
+	z-index: 10;
+}
+.header2 {
+	grid-column: 9 /24;
+	grid-row: 2 / 3;
+	z-index: 10;
+}
+.header3 {
+	grid-column: 11 /24;
+	grid-row: 2 / 3;
+	z-index: 10;
+}
+.header4 {
+	grid-column: 11 /24;
+	grid-row: 2 / 3;
+	z-index: 10;
 }
 
 .box {
@@ -45,44 +67,17 @@ body {
 	height: 100%;
 }
 
-.image {
-	grid-column: 10 / 14;
-	grid-row: 3/ 4;
-	width: 100%;
-	height: 100%;
-}
-
-/*
-.Buttons {
-	display: flex;
-	justify-content: space-between;
-	width: 80%;
-	grid-column: 5 / 24;
-	grid-row: 5 / 6;
-	margin: 20px 0;
-}
-
-.Buttons .firstButton,
-.Buttons .secondButton,
-.Buttons .thirdButton,
-.Buttons .fourthButton {
-	width: 23%;
-	height: auto;
-}
-
-.Buttons a {
-	display: block;
+.wrapper a {
 	cursor: pointer;
 }
 
-.Buttons a img {
-	transition: transform 0.3s ease;
-}
-
-.Buttons a:hover img {
+.wrapper a:hover img {
 	transform: scale(1.05);
 }
-*/
+
+.wrapper img {
+	transition: transform 0.2s ease;
+}
 
 img {
 	width: 100%;
@@ -91,19 +86,70 @@ img {
 .firstButton {
 	grid-column: 4 / 6;
 	grid-row: 4 / 5;
+	z-index: 10;
 }
 
 .secondButton {
 	grid-column: 9 / 12;
 	grid-row: 4 / 5;
+	z-index: 10;
 }
 
 .thirdButton {
 	grid-column: 15 / 18;
 	grid-row: 4 / 5;
+	z-index: 10;
 }
 
 .fourthButton {
 	grid-column: 20 / 22;
 	grid-row: 4 / 6;
+	z-index: 10;
+}
+
+/* z-index idea from ChatGPT */
+
+.image {
+	grid-column: 10 / 14;
+	grid-row: 3/ 4;
+	width: 110%;
+	height: 110%;
+}
+
+.image2 {
+	grid-column: 11 / 15;
+	grid-row: 3/ 4;
+	width: 80%;
+}
+
+.image3 {
+	grid-column: 10 / 15;
+	grid-row: 3/ 4;
+	width: 100%;
+}
+
+.image4 {
+	grid-column: 1 / 25;
+	grid-row: 1/ 12;
+	width: 100%;
+	height: 100%;
+}
+
+.image5 {
+	grid-column: 11 / 15;
+	grid-row: 3/ 4;
+	width: 80%;
+}
+
+.imageTree {
+	grid-column: 11 / 16;
+	grid-row: 4/ 9;
+	width: 100%;
+	height: 100%;
+}
+
+.box1 {
+	grid-column: 2 / 24;
+	grid-row: 4/ 6;
+	width: 100%;
 }
