--- a/style.css
+++ b/style.css
@@ -153,3 +153,49 @@ img {
 	grid-row: 4/ 6;
 	width: 100%;
 }
+
+@media screen and (max-width: 768px) {
+	.header {
+		grid-column: 5 /24;
+		grid-row: 2 / 3;
+		z-index: 10;
+	}
+	.header2 {
+		grid-column: 6 /24;
+		grid-row: 2 / 3;
+		z-index: 10;
+	}
+	.header3 {
+		grid-column: 7 /24;
+		grid-row: 2 / 3;
+		z-index: 10;
+	}
+	.header4 {
+		grid-column: 10 /24;
+		grid-row: 2 / 3;
+		z-index: 10;
+	}
+
+	.image {
+		grid-column: 10 / 14;
+		grid-row: 3/ 4;
+		width: 160%;
+		height: 160%;
+	}
+	.image2 {
+		grid-column: 11 / 15;
+		grid-row: 3/ 4;
+		width: 110%;
+	}
+	.image3 {
+		grid-column: 10 / 15;
+		grid-row: 3/ 4;
+		width: 140%;
+	}
+
+	.image5 {
+		grid-column: 11 / 15;
+		grid-row: 3/ 4;
+		width: 100%;
+	}
+}
